added what is needed for iPython use with f5-sdk

--- a/images/ansible/Dockerfile
+++ b/images/ansible/Dockerfile
@@ -15,7 +15,7 @@ ENV SNOPS_IMAGE ansible
 COPY fs /
 
 #Add libraries to compile ansible
-RUN apk add --update gcc python2-dev linux-headers libc-dev libffi libffi-dev openssl openssl-dev
+RUN apk add --update gcc python2-dev linux-headers libc-dev libffi libffi-dev openssl openssl-dev py-virtualenv 
 
 #install ansible
-RUN pip install ansible bigsuds f5-sdk netaddr
+RUN pip install ansible bigsuds f5-sdk netaddr ipython
